Pom refactoring